--- a/.env
+++ b/.env
@@ -8,6 +8,15 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Online database 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=lvlcleaning_website
+# DB_USERNAME=lvlcleaning_leoblaze
+# DB_PASSWORD=leoblaze@lvl/7949/1/1694
+
+#ofline database
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
